# apt2sbom

./: CONTRIBUTING.md  LICENSE.txt  README.md  setup.cfg
.github/workflows/: pylint.yml  runchecks.yml
apt2sbom/: __init__.py  apt2sbom.py  dp2cdx.py  dp2json.py  dp2yaml.py  piplist.py  readconf.py  wsbom.py  wzvis.py
config/: apache-snippet.conf  sbom.wsgi
tests/: validate.py
