[metadata]
name = apt2sbom
version = 0.69n
author = Eliot Lear
author_email = lear@cisco.com
description = Convert APT information from Debian into SBOM
long_description = file:README.md
long_description_content_type= text/markdown
license = BSD 3-Clause License

[options]
packages = apt2sbom
install_requires =
   werkzeug
   flask
   flask_httpauth
   pip_api

[options.entry_points]
console_scripts =
   apt2sbom = apt2sbom:cli

